# NDK_jni_cmake

./: README.md  settings.gradle
JNIDynamicLoad/: build.gradle
JNIDynamicLoad/src/androidTest/java/com/jesen/jnidynamicload/: ExampleInstrumentedTest.kt
JNIDynamicLoad/src/main/: AndroidManifest.xml
JNIDynamicLoad/src/main/cpp/: CMakeLists.txt
JNIDynamicLoad/src/main/cpp/jni/: jni_dynamic_load.cpp
JNIDynamicLoad/src/main/java/com/jesen/jnidynamicload/: JNIDynamicLoad.kt  MainActivity.kt
JNIDynamicLoad/src/main/res/layout/: activity_main.xml
JNIDynamicLoad/src/test/java/com/jesen/jnidynamicload/: ExampleUnitTest.kt
JNIException/: build.gradle
JNIException/src/androidTest/java/com/jesen/jniexception/: ExampleInstrumentedTest.kt
JNIException/src/main/: AndroidManifest.xml
JNIException/src/main/cpp/: CMakeLists.txt  jni_exception_test.cpp
JNIException/src/main/cpp/base/: base.h
JNIException/src/main/java/com/jesen/jniexception/: JNIExceptionTest.kt  MainActivity.kt
JNIException/src/main/res/layout/: activity_main.xml
JNIException/src/main/res/values-night/: themes.xml
JNIException/src/test/java/com/jesen/jniexception/: ExampleUnitTest.kt
JNIMirrorBitmap/: build.gradle
JNIMirrorBitmap/src/androidTest/java/com/jesen/jnimirrorbitmap/: ExampleInstrumentedTest.kt
JNIMirrorBitmap/src/main/: AndroidManifest.xml
JNIMirrorBitmap/src/main/cpp/: CMakeLists.txt  base.h  jni_mirror_helper.cpp
JNIMirrorBitmap/src/main/java/com/jesen/jnimirrorbitmap/: JNIMirrorHelper.kt  MainActivity.kt
JNIMirrorBitmap/src/main/res/layout/: activity_main.xml
JNIMirrorBitmap/src/main/res/values/: strings.xml
JNIMirrorBitmap/src/test/java/com/jesen/jnimirrorbitmap/: ExampleUnitTest.kt
JNIReferenceManage/: build.gradle
JNIReferenceManage/src/androidTest/java/com/jesen/jnireferencemanage/: ExampleInstrumentedTest.kt
JNIReferenceManage/src/main/: AndroidManifest.xml
JNIReferenceManage/src/main/cpp/: CMakeLists.txt  jni_reference_manager.cpp
JNIReferenceManage/src/main/cpp/base/: base.h
JNIReferenceManage/src/main/java/com/jesen/jnireferencemanage/: JNIReferenceManager.kt  MainActivity.kt
JNIReferenceManage/src/main/res/layout/: activity_main.xml
JNIReferenceManage/src/main/res/values/: strings.xml
JNIReferenceManage/src/test/java/com/jesen/jnireferencemanage/: ExampleUnitTest.kt
JNIThreadInvoke/: build.gradle
JNIThreadInvoke/src/androidTest/java/com/jesen/jnithreadinvoke/: ExampleInstrumentedTest.kt
JNIThreadInvoke/src/main/: AndroidManifest.xml
JNIThreadInvoke/src/main/cpp/: CMakeLIsts.txt
JNIThreadInvoke/src/main/cpp/jni/: base.h  jni_constructor.cpp  jni_invoke_method.cpp  jvm.cpp  jvm.h
JNIThreadInvoke/src/main/java/com/jesen/jnithreadinvoke/: JNIContructor.java  JNIInvokeMethod.kt  MainActivity.kt
JNIThreadInvoke/src/main/java/com/jesen/jnithreadinvoke/base/: ICallbackMethod.kt  IThreadCallback.kt  Question.java
JNIThreadInvoke/src/main/res/values/: strings.xml
JNIThreadInvoke/src/test/java/com/jesen/jnithreadinvoke/: ExampleUnitTest.kt
JNIThreadTalk/: build.gradle
JNIThreadTalk/src/androidTest/java/com/jesen/jnithreadtalk/: ExampleInstrumentedTest.kt
JNIThreadTalk/src/main/: AndroidManifest.xml
JNIThreadTalk/src/main/cpp/: CMakeLists.txt  jni_product_consumer.cpp  jni_thread_syn.cpp  jni_thread_test.cpp
JNIThreadTalk/src/main/cpp/base/: base.h  jvm.cpp  jvm.h
JNIThreadTalk/src/main/java/com/jesen/jnithreadtalk/: JNIProductConsumer.kt  JNIThreadSyn.kt  JNIThreadTest.kt  MainActivity.kt
JNIThreadTalk/src/main/res/layout/: activity_main.xml
JNIThreadTalk/src/main/res/values/: strings.xml
JNIThreadTalk/src/test/java/com/jesen/jnithreadtalk/: ExampleUnitTest.kt
JniReference/: build.gradle
JniReference/src/androidTest/java/com/jesen/jnireference/: ExampleInstrumentedTest.kt
JniReference/src/main/: AndroidManifest.xml
JniReference/src/main/cpp/: CMakeLists.txt  base.h  jni_access_field.cpp  jni_reference.cpp
JniReference/src/main/java/com/jesen/jnireference/: JNIAccessField.kt  JNIReference.kt  MainActivity.kt
JniReference/src/main/java/com/jesen/jnireference/bean/: DecFile.kt
JniReference/src/main/res/layout/: activity_main.xml
JniReference/src/main/res/values/: strings.xml
JniReference/src/test/java/com/jesen/jnireference/: ExampleUnitTest.kt
JniString/: build.gradle
JniString/src/androidTest/java/com/jesen/jnistring/: ExampleInstrumentedTest.kt
JniString/src/main/: AndroidManifest.xml
JniString/src/main/cpp/: CMakeLists.txt
JniString/src/main/cpp/base/: base.h
JniString/src/main/cpp/jni/: jni_string.cpp
JniString/src/main/java/com/jesen/jnistring/: JNIString.kt  MainActivity.kt
JniString/src/main/res/layout/: activity_main.xml
JniString/src/main/res/values/: strings.xml  themes.xml
JniString/src/test/java/com/jesen/jnistring/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/example/ndk_jni_cmake/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/ndk_jni_cmake/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ndk_jni_cmake/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
